--- a/.gitignore
+++ b/.gitignore
@@ -13,11 +13,16 @@
 
 # misc
 .DS_Store
+.env.dev
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
-
+.eslintcache
+.vscode
+debug.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.gitignore
+/SQL
