--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@brainhubeu/react-carousel": "^2.0.4",
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
+    "@reduxjs/toolkit": "^1.5.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -11,22 +16,21 @@
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.6",
-    "@types/recoil": "0.0.1",
     "@types/styled-components": "^5.1.7",
+    "@typescript-eslint/eslint-plugin": "^4.24.0",
     "axios": "^0.21.1",
     "env-cmd": "^10.1.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-redux": "^7.2.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.1",
-    "recoil": "^0.1.2",
-    "redux": "^4.0.5",
+    "react-scripts": "^4.0.3",
+    "redux": "^4.1.0",
     "styled-components": "^5.2.0",
-    "typescript": "^3.7.5"
+    "typescript-styled-plugin": "^0.15.0"
   },
   "scripts": {
-    "start:dev": "env-cmd -f .env.dev react-scripts start",
+    "start:dev": " env-cmd -f .env.dev react-scripts start",
     "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -49,7 +53,9 @@
   },
   "devDependencies": {
     "@types/config": "0.0.38",
-    "@types/react-redux": "^7.1.14",
-    "prettier": "^2.1.2"
+    "@types/react-redux": "^7.1.16",
+    "@typescript-eslint/parser": "^4.24.0",
+    "prettier": "^2.1.2",
+    "typescript": "^3.9.9"
   }
 }
